:sparkles: feat: header e navbar desenvolvidos

--- a/src/scss/mixins/_common-mixins.scss
+++ b/src/scss/mixins/_common-mixins.scss
@@ -1,1 +1,5 @@
-@import "../vendor/vendor";
+@mixin container($color, $padding, $width) {
+  background-color: $color;
+  padding: $padding;
+  width: $width;
+}
