--- a/src/scss/variables/_variable.scss
+++ b/src/scss/variables/_variable.scss
@@ -1,59 +1,22 @@
-@import "../vendor/vendor";
+@import "../../../node_modules/bootstrap/scss/functions";
+@import "../../../node_modules/bootstrap/scss/variables";
+@import "../../../node_modules/bootstrap/scss/variables-dark";
 
-@font-face {
-  font-family: "Geometos Neue";
-  src: url("../../assets/fonts/geometos-neue-light.otf");
-  src: url("../../assets/fonts/geometos-neue-light.otf") format("opentype");
-  font-weight: 300;
-}
-
-@font-face {
-  font-family: "Geometos Neue";
-  src: url("../../assets/fonts/geometos-neue.otf");
-  src: url("../../assets/fonts/geometos-neue.otf") format("opentype");
-  font-weight: 400;
-}
-
-@font-face {
-  font-family: "Geometos Neue";
-  src: url("../../assets/fonts/geometos-neue-bold.otf");
-  src: url("../../assets/fonts/geometos-neue-bold.otf") format("opentype");
-  font-weight: 600;
-}
-
-@font-face {
-  font-family: "Geometos Neue";
-  src: url("../../assets/fonts/geometos-neue-extrabold.otf");
-  src: url("../../assets/fonts/geometos-neue-extrabold.otf") format("opentype");
-  font-weight: 700;
-}
-
-@font-face {
-  font-family: "Geometos Neue";
-  src: url("../../assets/fonts/geometos-neue-black.otf");
-  src: url("../../assets/fonts/geometos-neue-black.otf") format("opentype");
-  font-weight: 800;
-}
-
-@font-face {
-  font-family: "Geometos Neue";
-  src: url("../../assets/fonts/geometos-neue-ultra.otf");
-  src: url("../../assets/fonts/geometos-neue-ultra.otf]") format("opentype");
-  font-weight: 900;
-}
+$body-bg: #051735;
+$body-color: #fff;
+$emphasis-color: #fff;
 
 $font-family-sans-serif: "PT Sans", sans-serif;
 $font-family-monospace: "PT Mono", monospace;
 $font-family-bebas: "Bebas Neue", sans-serif;
 $font-family-josefin: "Josefin Sans", sans-serif;
-$font-family-geometos: "Geometos Neue", sans-serif;
 $font-weight-black: 800;
 $font-weight-ultra: 900;
 
-$font-family-base: var(--#{$prefix}font-sans-serif);
-$font-family-code: var(--#{$prefix}font-monospace);
+$font-family-base: $font-family-sans-serif;
+$font-family-code: $font-family-monospace;
 
-$headings-font-family: $font-family-geometos;
+$headings-font-family: $font-family-josefin;
 $headings-font-weight: $font-weight-black;
 
 $custom-colors: (
@@ -79,4 +42,20 @@ $custom-colors: (
   "id-alef-lightblue-500": #0694db,
 );
 
+$custom-spacers: (
+  6: $spacer * 4,
+  7: $spacer * 5,
+  8: $spacer * 6,
+  9: $spacer * 7,
+  10: $spacer * 8,
+);
+
 $theme-colors: map-merge($theme-colors, $custom-colors);
+$spacers: map-merge($spacers, $custom-spacers);
+
+$navbar-light-color: #fff;
+$navbar-light-active-color: #fff;
+$navbar-light-hover-color: rgba(255, 255, 255, 0.8);
+$btn-padding-y: 0.5rem;
+$btn-font-size: 1.15rem;
+$btn-font-weight: $font-weight-ultra;
