--- a/src/scss/utilities/_utilities.scss
+++ b/src/scss/utilities/_utilities.scss
@@ -1,4 +1,7 @@
-@import "../vendor/vendor";
+@import "../variables/variable";
+@import "../../../node_modules/bootstrap/scss/maps";
+@import "../../../node_modules/bootstrap/scss/mixins";
+@import "../../../node_modules/bootstrap/scss/utilities";
 
 $utilities: map-merge(
   $utilities,
@@ -10,6 +13,11 @@ $utilities: map-merge(
         bebas: $font-family-bebas,
         josefin: $font-family-josefin,
       ),
+    ),
+    "font-size": (
+      property: font-size,
+      class: fs,
+      values: $custom-font-sizes,
     ),
     "font-weight": (
       property: font-weight,
@@ -31,3 +39,5 @@ $utilities: map-merge(
     ),
   )
 );
+
+@import "../../../node_modules/bootstrap/scss/utilities/api";
