--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,4 +1,11 @@
 .btn-consulta {
-  font-size: 1.15rem !important;
-  margin: 0.5rem 0 !important;
+  font-weight: 600 !important;
+
+  &:hover {
+    background-color: map-get($custom-colors, "id-alef-red-400") !important;
+  }
+
+  &:active {
+    background-color: map-get($custom-colors, "id-alef-red-100") !important;
+  }
 }
