--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,13 +1,3 @@
-.hero {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  height: 39rem;
-  width: 100%;
-}
-
 .hero::before {
   content: "";
   background-image: url($bg-texture);
@@ -78,7 +68,6 @@
 .hero-gradient-right {
   width: 100%;
   height: 100%;
-  position: relative;
   background: rgb(5, 23, 53);
   background: -moz-linear-gradient(
     90deg,
@@ -104,7 +93,6 @@
 .hero-gradient-left {
   width: 100%;
   height: 100%;
-  position: relative;
   background: rgb(5, 23, 53);
   background: -moz-linear-gradient(
     270deg,
@@ -136,8 +124,15 @@
   align-items: center;
 }
 
-.hero-content img {
-  width: auto;
-  height: 38rem;
-  object-fit: contain;
+.highlight {
+  color: map-get($custom-colors, "id-alef-lightblue-500") !important;
+}
+
+.highlight_underline {
+  text-decoration: underline;
+  text-decoration-color: map-get(
+    $custom-colors,
+    "id-alef-lightblue-500"
+  ) !important;
+  text-underline-offset: 0.5rem;
 }
